--- a/1/index.html
+++ b/1/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>CS 280A Proj 1: Images of the Russian Empire</h1>
+<h2>CS 280A by: Alonso Martinez</h2>
+<hr>
+<h2>Description</h2>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
