--- a/1/index.html
+++ b/1/index.html
@@ -27,19 +27,19 @@ Given more time, I figure that instead of searching for the whole permutation of
 While my algorithm was able to achieve alignment, I recognize that my vector displacement written with each image might be off. This is due to them being relative to the previous level in the pyramid and I did not have enough time to properly compute the final vector displacement between the original and the aligned image. 
 </p>
 <h2>Results</h2>
-<img src="./media/cathedral.jpg" alt="" width="500" height="300">
+<img src="./media/cathedral_aligned.jpg" alt="" width="500" height="300">
 <h3>Displacement matrix:
 <p>
 red: ()
 green: ()
 </p>
-<img src="./media/monestary.jp" alt="" width="500" height="300">
+<img src="./media/monestary_aligned.jpg" alt="" width="500" height="300">
 <h3>Displacement matrix:
 <p>
 red: ()
 green: ()
 </p>
-<img src="./media/tobolsk.jpg" alt="" width="500" height="300">
+<img src="./media/tobolsk_aligned.jpg" alt="" width="500" height="300">
 <h3>Displacement matrix:
 <p>
 red: ()
