--- a/1/index.html
+++ b/1/index.html
@@ -62,5 +62,48 @@ While my algorithm was able to achieve alignment, I recognize that my vector dis
 <h3>Displacement matrix:</h3>
 <p>Red: [3 2]<br>Green: [6 3]</p>
 
+<img src="./media/lady_aligned.jpg" alt="" width="500">
+<h3>Displacement matrix:</h3>
+<p>Red: <br>Green: </p>
+
+<img src="./media/sculpture_aligned.jpg" alt="" width="500">
+<h3>Displacement matrix:</h3>
+<p>Red: <br>Green: </p>
+
+<img src="./media/harvesters_aligned.jpg" alt="" width="500">
+<h3>Displacement matrix:</h3>
+<p>Red: <br>Green: </p>
+
+<img src="./media/self_portrait_aligned.jpg" alt="" width="500">
+<h3>Displacement matrix:</h3>
+<p>Red: <br>Green: </p>
+
+<img src="./media/icon_aligned.jpg" alt="" width="500">
+<h3>Displacement matrix:</h3>
+<p>Red: <br>Green: </p>
+
+<img src="./media/train_aligned.jpg" alt="" width="500">
+<h3>Displacement matrix:</h3>
+<p>Red: <br>Green: </p>
+
+<img src="./media/onion_church_aligned.jpg" alt="" width="500">
+<h3>Displacement matrix:</h3>
+<p>Red: <br>Green: </p>
+
+<img src="./media/melons_aligned.jpg" alt="" width="500">
+<h3>Displacement matrix:</h3>
+<p>Red: <br>Green: </p>
+    
+<img src="./media/three_generations_aligned.jpg" alt="" width="500">
+<h3>Displacement matrix:</h3>
+<p>Red: <br>Green: </p>
+
+<img src="./media/church_aligned.jpg" alt="" width="500">
+<h3>Displacement matrix:</h3>
+<p>Red: <br>Green: </p>
+
+<img src="./media/emir_aligned.jpg" alt="" width="500">
+<h3>Displacement matrix:</h3>
+<p>Red: <br>Green: </p>
 </body>
 </html>
