--- a/1/index.html
+++ b/1/index.html
@@ -12,11 +12,15 @@
         h3 {
             margin-left: 40px;  /* More indentation for sub-subheadings */
         }
+        p {
+            margin-left: 60px;  /* More indentation for sub-subheadings */
+        }
     </style>
 </head>
 <body>
 
 <h1>CS 280A Proj 1: Images of the Russian Empire</h1>
+<h2>by: RGB Alignment</h2>
 <h2>by: Alonso Martinez</h2>
 <hr>
 <h2>Overview</h2>
@@ -49,12 +53,13 @@ Given more time, I figure that instead of searching for the whole permutation of
 While my algorithm was able to achieve alignment, I recognize that my vector displacement written with each image might be off. This is due to them being relative to the previous level in the pyramid, and I did not have enough time to properly compute the final vector displacement between the original and the aligned image.
 </p>
 
-<h2>Results</h2>
+<h1>Results</h2>
+<h1>JPGs</h2>
 <img src="./media/cathedral_aligned.jpg" alt="Cathedral aligned image" width="500">
 <h3>Displacement matrix:</h3>
 <p>Red: [5 2]<br>Green: [12 3]</p>
 
-<img src="./media/monestary_aligned.jpg" alt="Monestary aligned image" width="500">
+<img src="./media/monastery_aligned.jpg" alt="monastery aligned image" width="500">
 <h3>Displacement matrix:</h3>
 <p>Red: [-3 2]<br>Green: [3 2]</p>
 
@@ -62,6 +67,7 @@ While my algorithm was able to achieve alignment, I recognize that my vector dis
 <h3>Displacement matrix:</h3>
 <p>Red: [3 2]<br>Green: [6 3]</p>
 
+<h1>TIFSs</h2>
 <img src="./media/lady_aligned.jpg" alt="" width="500">
 <h3>Displacement matrix:</h3>
 <p>Red: <br>Green: </p>
@@ -105,5 +111,20 @@ While my algorithm was able to achieve alignment, I recognize that my vector dis
 <img src="./media/emir_aligned.jpg" alt="" width="500">
 <h3>Displacement matrix:</h3>
 <p>Red: <br>Green: </p>
+
+<h1>Additional Images:</h3>
+
+<img src="./media/emir_aligned.jpg" alt="" width="500">
+<h3>Displacement matrix:</h3>
+<p>Red: <br>Green: </p>
+
+<img src="./media/emir_aligned.jpg" alt="" width="500">
+<h3>Displacement matrix:</h3>
+<p>Red: <br>Green: </p>
+
+<img src="./media/emir_aligned.jpg" alt="" width="500">
+<h3>Displacement matrix:</h3>
+<p>Red: <br>Green: </p>
+    
 </body>
 </html>
