--- a/1/index.html
+++ b/1/index.html
@@ -25,11 +25,16 @@
 <hr>
 <h2>Overview</h2>
 <p>
-This project taught us about how images are composed of intensity channels of Red, Green, and Blue colors. Between 1863-1944, Prokudin-Gorskii took a first-of-a-kind collection of Red, Green, and Blue photos using multiple cameras and corresponding colored filters. Unfortunately, they are misaligned, which presents a learning opportunity for us to get our hands dirty in image manipulation.
+Between 1863-1944 Prokudin-Gorskii took a first of a kind collection of Red, Green and Blue photos using multiple cameras and corresponding colored filters.
+Unfortunately the translation (and possibly rotation and scale) are misaligned which presents a learning opportunity for us to get our hands dirty in image manipulation.
+This challenge additionally creates an opportunity to learn about computational efficiency when digitally manipulating images.
 </p>
 <h2>Approach</h2>
 <p>
-I follow the approach described in the project by first dividing the image’s height into three individual images, creating permutations of the translated image, and comparing the alignment using the structural_similarity method from skimage. To make it more computationally tractable for very large images, we use a hierarchical resolution approach to align the images.
+We first divide the image’s height into three individual images. Then we create all possible permutations of the translated image within a window size and compare the alignment using the structural_similarity method from skimage. 
+To make it more computationally tractable for very large images (TIFs), we use a hierarchical resolution approach to aligning the images (pyramid resolution scheme).
+Uniqueness to my approach. Within the possible permutations of the window search, I wondered if there was a way to reduce for loops and roll operations. I chose to explore using a tiling approach in hope to reduce the computational load. I would have liked to have more time to confirm that this was a faster approach than individually transforming images.
+I also began to explore “fancy indexing” to see if instead of using np.roll, I could apply all the transformations at once for the set of tiling images (think of a displacement map, but for indices), but did not finish in time.
 </p>
 <p>
 Within the possible permutations of the window search, I wondered if there was a way to reduce for loops and roll operations. I chose to explore using a tiling approach in hopes to reduce the computational load. I did not get a chance to code the more traditional approach of individually transforming the images and keeping track of the best score to compare the computational impact.
@@ -39,6 +44,10 @@ I also wanted to explore using "fancy indexing" to see if instead of using np.ro
 </p>
 
 <h2>Challenges</h2>
+<h3>Accurate vector displacement during pyramid resolution scheme</h3>
+<p>
+While my algorithm was able to achieve alignment, I recognize that my vector displacement written with each image might be off. This is due to them being relative to the previous level in the pyramid, and I did not have enough time to properly compute the final vector displacement between the original and the aligned image.
+</p>
 <h3>Computational efficiency</h3>
 <p>
 The largest challenge was that I spent too much time trying to figure out the fancy indexing approach.
@@ -48,10 +57,7 @@ As mentioned earlier, I did implement the tiling to reduce the number of np.roll
 Instead of doing alignment in the highest resolution, I chose to skip this level as it seemed to be achieving enough alignment with the other layers.
 Given more time, I figure that instead of searching for the whole permutation of transformations inside of the window size, that if you take the gradient of the error, you can descend on the right answer. Also, in addition to the pyramid resolution, it would benefit if the permutations of transformations were done in intervals rather than every pixel.
 </p>
-<h3>Pyramid displacement</h3>
-<p>
-While my algorithm was able to achieve alignment, I recognize that my vector displacement written with each image might be off. This is due to them being relative to the previous level in the pyramid, and I did not have enough time to properly compute the final vector displacement between the original and the aligned image.
-</p>
+
 
 <h1>Results</h2>
 <h1>JPGs</h2>
