--- a/1/index.html
+++ b/1/index.html
@@ -63,15 +63,15 @@ Given more time, I figure that instead of searching for the whole permutation of
 <h2>JPGs</h2>
 <img src="./media/cathedral_aligned.jpg" alt="Cathedral aligned image" width="500">
 <h3>Displacement matrix:</h3>
-<p>Red: [5 2]<br>Green: [12 3]</p>
+<p>Red:[5 2]<br>Green:[12 3]</p>
 
 <img src="./media/monastery_aligned.jpg" alt="monastery aligned image" width="500">
 <h3>Displacement matrix:</h3>
-<p>Red: [-3 2]<br>Green: [3 2]</p>
+<p>Red:[-3 2]<br>Green:[3 2]</p>
 
 <img src="./media/tobolsk_aligned.jpg" alt="Tobolsk aligned image" width="500">
 <h3>Displacement matrix:</h3>
-<p>Red: [3 2]<br>Green: [6 3]</p>
+<p>Red:[3 2]<br>Green:[6 3]</p>
 
 <h2>TIFSs</h2>
 <img src="./media/lady_aligned.jpg" alt="" width="500">
@@ -120,17 +120,19 @@ Given more time, I figure that instead of searching for the whole permutation of
 
 <h1>Additional Images:</h3>
 
-<img src="./media/emir_aligned.jpg" alt="" width="500">
+<img src="./media/chalice_aligned" alt="" width="500">
 <h3>Displacement matrix:</h3>
-<p>Red: <br>Green: </p>
+<p>Red:[7 3]<br>Green:[14  5]</p>
 
-<img src="./media/emir_aligned.jpg" alt="" width="500">
+<img src="./media/mozhaisk_aligned" alt="" width="500">
 <h3>Displacement matrix:</h3>
-<p>Red: <br>Green: </p>
+<p>Red:[4 1]<br>Green:[9 3]</p>
 
-<img src="./media/emir_aligned.jpg" alt="" width="500">
+
+<img src="./media/Napoleon_aligned" alt="" width="500">
 <h3>Displacement matrix:</h3>
-<p>Red: <br>Green: </p>
+<p>Red:[6 1]<br>Green:[13  0]</p>
     
+
 </body>
 </html>
