--- a/1/index.html
+++ b/1/index.html
@@ -54,8 +54,7 @@
 <body>
 
     <h1>CS 280A Proj 1: Images of the Russian Empire</h1>
-    <h2>RGB Image Alignment</h2>
-    <h2>By: Alonso Martinez<h2>
+    <h2>RGB Image Alignment by Alonso Martinez</h2>
     <hr>
 
     <h2>Overview</h2>
@@ -71,7 +70,7 @@
     </p>
     <p>
         I explored reducing for loops and roll operations by using a tiling approach in hopes of reducing the computational load. Unfortunately, I did not have enough time to confirm that this was a faster approach than individually transforming images.
-        Additionally, I explored using “fancy indexing” to apply transformations in bulk (think of a displacement map, but for indices) for the set of tiling images, but could not finish in time.
+        Additionally, I explored using “fancy indexing” to apply transformations in bulk for the set of tiling images, but could not finish in time.
     </p>
 
     <h2>Challenges</h2>
