--- a/1/index.html
+++ b/1/index.html
@@ -86,6 +86,7 @@
 
     <h1>Results</h1>
 
+    <h2>JPGs</h2>
     <!-- Start of two-column layout -->
     <div class="image-wrapper">
         <div class="image-block">
@@ -108,7 +109,10 @@
                 <strong>Displacement matrix:</strong> <br> Red: [3, 2], Green: [6, 3]
             </figcaption>
         </div>
+    </div>
 
+    <h2>TIFs</h2>
+    <div class="image-wrapper">
         <div class="image-block">
             <img src="./media/sculpture_aligned.jpg" alt="Aligned image of Sculpture">
             <figcaption class="displacement-matrix">
@@ -136,56 +140,10 @@
                 <strong>Displacement matrix:</strong> <br> Red: N/A, Green: N/A
             </figcaption>
         </div>
-        
-        <div class="image-block">
-            <img src="./media/icon_aligned.jpg" alt="Aligned image of Icon">
-            <figcaption class="displacement-matrix">
-                <strong>Displacement matrix:</strong> <br> Red: N/A, Green: N/A
-            </figcaption>
-        </div>
+    </div>
 
-        <div class="image-block">
-            <img src="./media/train_aligned.jpg" alt="Aligned image of Train">
-            <figcaption class="displacement-matrix">
-                <strong>Displacement matrix:</strong> <br> Red: N/A, Green: N/A
-            </figcaption>
-        </div>
-
-        <div class="image-block">
-            <img src="./media/onion_church_aligned.jpg" alt="Aligned image of Onion Church">
-            <figcaption class="displacement-matrix">
-                <strong>Displacement matrix:</strong> <br> Red: N/A, Green: N/A
-            </figcaption>
-        </div>
-
-        <div class="image-block">
-            <img src="./media/melons_aligned.jpg" alt="Aligned image of Melons">
-            <figcaption class="displacement-matrix">
-                <strong>Displacement matrix:</strong> <br> Red: N/A, Green: N/A
-            </figcaption>
-        </div>
-
-        <div class="image-block">
-            <img src="./media/three_generations_aligned.jpg" alt="Aligned image of Three Generations">
-            <figcaption class="displacement-matrix">
-                <strong>Displacement matrix:</strong> <br> Red: N/A, Green: N/A
-            </figcaption>
-        </div>
-
-        <div class="image-block">
-            <img src="./media/church_aligned.jpg" alt="Aligned image of Church">
-            <figcaption class="displacement-matrix">
-                <strong>Displacement matrix:</strong> <br> Red: N/A, Green: N/A
-            </figcaption>
-        </div>
-
-        <div class="image-block">
-            <img src="./media/emir_aligned.jpg" alt="Aligned image of Emir">
-            <figcaption class="displacement-matrix">
-                <strong>Displacement matrix:</strong> <br> Red: N/A, Green: N/A
-            </figcaption>
-        </div>
-
+    <h2>Additional Images</h2>
+    <div class="image-wrapper">
         <div class="image-block">
             <img src="./media/chalice_aligned.jpg" alt="Aligned image of Chalice">
             <figcaption class="displacement-matrix">
