--- a/2/index.html
+++ b/2/index.html
@@ -716,6 +716,12 @@
         <img src="./media/blended_laplace_stack_2.jpg" alt="Dante original" width="900">
     </div>
     </div>
+    <div class="image-wrapper indent-level-1">
+        <div class="image-item" style="margin: 9px;">
+            <div class="image-text">Final Blend</div>
+            <img src="./media/orapple.jpg" alt="Dante original" width="350">
+        </div>
+    </div>
     <hr>
     <h2>Final thoughts</h2>
     <p class='indented'> This project and the hands-on lectures revealed the incredible complexity that very simple
