--- a/2/index.html
+++ b/2/index.html
@@ -724,10 +724,9 @@
     </div>
     <hr>
     <h2>Final thoughts</h2>
-    <p class='indented'> This project and the hands-on lectures revealed the incredible complexity that very simple
-        components working together can create. A simple but practical lesson taught to me in this lesson was also to be
-        very vigilant about understanding how data ranges are manipulated by each operation; knowing when it's ok to
-        clip data and when it's not. Knowing when it's ok to remap values and when it's not. Throughout this project, I
+    <p class='indented'> This project and the hands-on lectures revealed the incredible complexity that can arise from simple signals interacting with eachother.
+        On a practical level I learned to be careful about how scaling the values of the images mattered a lot when the range was negative vs positive, as well as being
+        very careful about when to use np.clip; sometimes it was critically necessary and other times it was throwing away unwanted information. Throughout this project, I
         kept thinking, this is so cool, "Why isn't there a Photoshop clone / blend brush that leverages the human
         perceptual trick of focusing mostly on higher frequencies?!" </p>
     <footer>
